# publications

./: .gitignore  2020_emnlp_curiosity.tex  2021_acl_leaderboard.tex  Makefile  README.md
2020_emnlp_curiosity/: README.md  analysis.py  db.py  figures.py  pyproject.toml
2020_emnlp_curiosity/commit_auto_fig/: dataset-stats-full.tex  dataset-stats-test.tex  dataset-stats-testzero.tex  dataset-stats-train.tex  dataset-stats-val.tex  experiment-table.tex  krip-score.tex  paraphrase-table.tex  res.txt  student-prefs.tex  topics-full.txt  topics.txt
2020_emnlp_curiosity/commit_data/: dataset-sample.json  paraphrases.json  results_charm.json  results_e2e_bert.json
2020_emnlp_curiosity/figures/: dialog-acts.sh  entity-quiz.html  paraphrases.tex.jinja2  stats.tex.jinja2  table_template.tex.jinja2
2020_emnlp_curiosity/sections/: 00-abstract.tex  10-intro.tex  20-data.tex  25-analysis.tex  30-method.tex  40-exp.tex  50-rel.tex  60-conc.tex  70-apx.tex  80-acks.tex  examples.tex
2021_acl_leaderboard/: README.md  disagreements.tex  files.toml  pyproject.toml  supplementary.tex
2021_acl_leaderboard/commit_auto_figs/: 3pl.json  appendix_examples.tex  disagree_pvalues.json  disagreement_examples.tex  example_analysis.json  irt_confusion.json  irt_example_dist.json  irt_lambda_dist.json  irt_model_comparison.json  mcnemar_simulation.json  ranking_stability_significance.json  test_agreement.json  thought.json  vw_ablation.json
2021_acl_leaderboard/sections/: 10-intro.tex  100-extra.tex  20-story.tex  30-leader.tex  50-exp.tex  55-interp.tex  70-rel.tex  80-conc.tex  acks.tex  (+1 more)
(+54 files in other folders)
