[tool.poetry]
name = "isicle"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
altair-saver = "^0.5.0"
pandas = "^1.1.4"
pedroai = "^0.1.10"
typer = "^0.3.2"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
ipython = "^7.19.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
